--- a/spec/example_app/config/secrets.yml
+++ b/spec/example_app/config/secrets.yml
@@ -1,11 +1,11 @@
 default: &default
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: test_secret
 
 development:
   <<: *default
 
 test:
-  secret_key_base: test_secret
+  <<: *default
 
 staging:
   <<: *default
